[metadata]
name = tno.mpc.encryption_schemes.utils
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Generic utilities for implementing encryption schemes
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    encryption schemes
    utils
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.encryption_schemes.utils/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/encryption_schemes/utils/0.7.5
    Source Code = https://github.com/TNO-MPC/encryption_schemes.utils
version = attr: tno.mpc.encryption_schemes.utils.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.encryption_schemes.utils
    tno.mpc.encryption_schemes.utils.test
zip_safe = False
install_requires =
    importlib_metadata;python_version<"3.8"
    packaging
    sympy~=1.3
namespace_packages =
    tno
    tno.mpc
    tno.mpc.encryption_schemes
include_package_data = True

[options.package_data]
tno.mpc.encryption_schemes.utils = py.typed

[options.extras_require]
gmpy =
    gmpy2~=2.1.0rc1
numpy =
    numpy
tests =
    numpy
    pytest
